5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1644_2703.log
== TEST (2019-04-16 12:37:59) 
-- CODE:
age = int(input("idade: "))

-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:40:35) 
-- CODE:
age = int(input("idade: "))
if(age>=18):
	mensagem = (eleitor)
else:
	mensagem = nao_eleitor
print(mensagem.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:41:24) 
-- CODE:
age = int(input("idade: "))
if(age>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem.lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:41:34) 
-- CODE:
age = int(input("idade: "))
if(age>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem.lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:41:41) 
-- CODE:
age = int(input("idade: "))
if(age>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem.lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:41:50) 
-- CODE:
age = int(input("idade: "))
if(age>=18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
print(mensagem.lower())
-- EXECUTION TIME:
0.13668
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
